# Morrigu

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.old.txt  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  docker-compose.yml
.github/: README.md
.github/workflows/: MRG_MacOS.yml  MRG_MacOS.yml.disabled  MRG_Ubuntu.yml  MRG_Windows.yml  cmake.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
resources/sandbox/shaders/: Textures.glsl  flatColor.glsl  texture.glsl
resources/shaders/texture/: vk.frag  vk.vert
runtime/resources/shaders/: compile.sh
runtime/shaders/: Triangle.frag.spv
runtimes/Macha/scenes/: example.morrigu
src/: CMakeLists.txt  main.cpp
src/Macha/: AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  HierarchyPanel.cpp  HierarchyPanel.h  Macha.cpp  MachaApp.cpp  MachaLayer.cpp  MachaLayer.h  MaterialEditorLayer.cpp  MaterialEditorLayer.h  PropertiesPanel.cpp  PropertiesPanel.h  Scene.cpp  Scene.h  Viewport.cpp  Viewport.h
src/Macha/Components/: CMakeLists.txt  EntitySettings.h
src/Macha/Components/LightCasters/: CMakeLists.txt  DirectionalLight.h  PointLight.h
src/Macha/LightCasters/: CMakeLists.txt  DirectionalLight.h
src/Macha/Panels/: AssetPanel.cpp  AssetPanel.h  CMakeLists.txt  HierarchyPanel.cpp  HierarchyPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  Viewport.cpp  Viewport.h
src/Macha/runtime/: imgui.ini
src/Macha/runtime/scenes/: 3dtest.morrigu  example.morrigu  example2.morrigu
src/Morrigu/: Application.h  CMakeLists.txt  EntryPoint.cpp  Logger.h  Morrigu.h
src/Morrigu/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.cpp  FileNames.h  GLFWWrapper.cpp  GLFWWrapper.h  GLMIncludeHelper.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Warnings.h  Window.cpp  Window.h
src/Morrigu/Debug/: Instrumentor.h
src/Morrigu/Entity/: CMakeLists.txt  Entity.h  Transform.h
src/Morrigu/Entity/Components/: CMakeLists.txt  MeshRenderer.h  Tag.h  Transform.h
src/Morrigu/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
src/Morrigu/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Morrigu/Maths/: Maths.cpp  Maths.h
src/Morrigu/Renderer/: Buffers.cpp  Buffers.h  Camera.h  Context.cpp  Context.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  ImageLoader.cpp  ImageLoader.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCameraController.cpp  OrthoCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RenderingAPI.cpp  RenderingAPI.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h  VertexArray.cpp  VertexArray.h  WindowProperties.cpp  WindowProperties.h
src/Morrigu/Renderer/APIs/: OpenGLContext.cpp  OpenGLContext.h
src/Morrigu/Renderer/APIs/OpenGL/: Buffers.cpp  Buffers.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  OpenGLContext.cpp  Renderer2D.cpp  Renderer2D.h  RenderingAPI.cpp  RenderingAPI.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h  VertexArray.cpp  VertexArray.h
src/Morrigu/Renderer/APIs/Vulkan/: Buffers.cpp  Buffers.h  Context.cpp  Context.h  DescriptorAllocator.cpp  DescriptorAllocator.h  Framebuffer.cpp  Framebuffer.h  Helper.cpp  Helper.h  Pipeline.cpp  Pipeline.h  Renderer2D.cpp  Renderer2D.h  RenderingAPI.cpp  RenderingAPI.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h  VertexArray.cpp  VertexArray.h  VulkanHPPIncludeHelper.h  WindowProperties.h
src/Morrigu/Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  Framebuffer.cpp  Framebuffer.h  Material.h  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  RendererTypes.cpp  RendererTypes.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VMAIncludeHelper.h  Vertex.cpp  Vertex.h  VkInitialize.cpp  VkInitialize.h  VkRenderer.cpp  VkRenderer.h  VkTypes.h
src/Morrigu/Rendering/Components/: CMakeLists.txt  MeshRenderer.h  Transform.h
src/Morrigu/Rendering/UI/: CMakeLists.txt  Font.cpp  Font.h  Text.cpp  Text.h
src/Morrigu/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
src/Morrigu/Scene/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Morrigu/Utils/: Allocators.cpp  Allocators.h  CMakeLists.txt  Commands.cpp  Commands.h  FileDialogs.cpp  FileDialogs.h  GLMIncludeHelper.h  Maths.cpp  Maths.h  Meshes.cpp  Meshes.h  ModelLoading.cpp  ModelLoading.h  STBIncludeHelper.cpp  STBIncludeHelper.h  UtilityLayers.cpp  UtilityLayers.h  VMAIncludeHelper.cpp  VMAIncludeHelper.h
src/Morrigu/core/: CMakeLists.txt  entryPoint.cpp
src/SampleApp/: CMakeLists.txt  MaterialEditorLayer.cpp  MaterialEditorLayer.h  SampleApp.cpp  sampleApp.cpp
src/SampleApp/Utils/: CMakeLists.txt  ModelLoading.cpp  ModelLoading.h
src/Sandbox/: CMakeLists.txt  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
src/Sandbox/resources/shaders/: texture.glsl
src/Sandbox/runtime/resources/shaders/texture/: gl.glsl  vk.frag  vk.vert
src/Shaders/: CMakeLists.txt  definitions.glsl
src/Shaders/BasicMesh/: BasicMesh.frag  BasicMesh.vert  CMakeLists.txt
src/Shaders/ColoredMesh/: CMakeLists.txt  ColoredMesh.frag  ColoredMesh.vert
src/Shaders/GradientShader/: CMakeLists.txt  GradientShader.frag  GradientShader.vert
src/Shaders/PBR/: CMakeLists.txt  PBR.frag  PBR.vert
src/Shaders/TestShader/: CMakeLists.txt  TestShader.frag  TestShader.vert
src/Shaders/TextShader/: CMakeLists.txt  TextShader.frag  TextShader.vert
src/Shaders/TextureBlendingShader/: CMakeLists.txt  TextureBlendingShader.frag  TextureBlendingShader.vert
src/Shaders/TexturedMesh/: CMakeLists.txt  TexturedMesh.frag  TexturedMesh.vert
src/Shaders/Triangle/: CMakeLists.txt  Triangle.frag  Triangle.vert
(+11 files in other folders)
